--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ ul,ol{
 
 .features-subtitle{
     margin-bottom: 10px;
+    text-transform: uppercase;
 }
 
 .features-text{
@@ -490,8 +491,8 @@ ul,ol{
 
 
 
-
 /* контактні данні */
+
 
 
 .footer-list{
@@ -576,6 +577,59 @@ ul,ol{
     margin-right: 70px;
 }
 
+
+/* форма підвалу  */
+
+.footer-form-container{
+    margin-left: 93px;
+}
+
+.footer-form-btn{
+    display: flex;
+}
+
+.footer-form{
+    display: flex;
+}
+
+.footer-field-form{
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    color: #ffffff;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 1%);
+    border-radius: 4px;
+}    
+
+.footer-btn-form{      
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    background-color: #2196F3;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    border-radius: 4px;
+    border: none;
+    color: var(--hero-text-btn);
+    cursor: pointer;
+    margin-left: 12px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn-form:hover,
+.footer-btn-form:focus{    
+    background-color: #188CE8;      
+}
+
+.footer-icon-btn-form{
+    width: 24px;
+    height: 24px;
+}
 
 
 /* сторінка портфоліо */
@@ -763,6 +817,180 @@ img{
     height: 18px;
 }
 
+/* Стилі форми */
+
+.modal{
+    padding: 40px;
+}
+
+.modal-text{    
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.modal-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-title-field{
+    margin-top: 10px;
+}
+   
+
+
+.modal-field-form{
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-top: 4px;
+}
+
+.modal-field-form:focus{
+    outline: none;
+    border-color: var(--links-h-f-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-meaning{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.modal-form-conteyner{
+    display: block;
+    position: relative;
+}
+
+.modal-field-form:focus + .modal-icon-form{
+    fill: var(--links-h-f-color);
+}
+
+.modal-icon-form{    
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 12px;
+    width: 18px;
+    height: 18px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+    
+
+.modal-field-comments{
+    width: 100%;
+    height: 120px;    
+    padding-left: 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field-comments::placeholder{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-field-comments:focus{
+    outline: none;
+    border-color: var(--links-h-f-color);
+}
+
+.modal-checkbox-text,
+.modal-checkbox-text-link{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+.modal-checkbox-text-link{
+    color: #2196F3;    
+}
+
+.modal-field-comments{
+    margin-right: 7px;
+}
+
+.modal-y-n-title{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    align-self: center;
+}
+
+.modal-y-n-click:focus + .modal-icon-form-checkbox{
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 1);
+}
+
+.modal-y-n-click{
+    appearance: none;
+    position: absolute;
+}
+
+.modal-y-n-click:checked + .modal-icon-form-checkbox{
+    background-color: var(--links-h-f-color);
+    border-color: var(--links-h-f-color);
+    box-shadow: none;
+}
+
+.modal-icon-form-checkbox{
+    fill: var(--hero-text-btn);
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.modal-btn-form{
+    display: block;
+    margin: 0 auto;
+    width: 216px;
+    height: 50px;
+    background-color: #2196F3;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    color: var(--hero-text-btn);
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-btn-form:hover,
+.modal-btn-form:focus{
+    background-color: #188CE8;
+}    
 
 
 
